<?xml version="1.0"?>
<package format="2">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>TurtleBot3 Schulnavigator Launch Files</description>
  <maintainer email="team@test.de">Remote Monitoring Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>
</package>
